set body margin to 0px

--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
     <script src="scripts/pong.js" type="module"></script>
 
     <style>
+        body {
+            margin: 0px;
+        }
+
         #js-alg {
             width: 800px;
             height: 500px;
+
             background-color: lightgray;
         }
     </style>
