displaz canvas as 100vh and 100 vw

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
         }
 
         #js-alg {
-            width: 800px;
-            height: 500px;
+
+            width: 100vw;
+            height: 100vh;
 
             background-color: lightgray;
         }
